# rusty-tree

./: Cargo.toml  README.md
data/: colors.json  glyphs.json  icons.json  settings.json
src/: counter.rs  crawler.rs  main.rs  multimap.rs  renderer.rs  settings.rs
