[package]
name = "rusty-tree"
version = "0.1.0"
authors = ["Pascal <pascalasselin@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"serde_json" = "1.0.79"
"serde" = "1.0.117"
"serde_derive" = "1.0.117"
smallvec = "1.13.2"
"ansi_term" = "0.12.1"
"clap" = {version = "4.0.32", features = ["derive"]}
crossbeam-channel = "0.5.13"
glob-match = "=0.2.1"